# sysit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
scripts/: aur.sh  gen-pkgbuild.sh  generate-cargo-config.sh  install.sh  release.sh
src/: colors.rs  config.rs  cpu.rs  lib.rs  main.rs  memory.rs  ping.rs  sensors.rs
