# sysit | Check on the system with a quick glance!
# Copyright (C) 2021 Rohan Jain
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "sysit"
description = "System Sit! Check on the system with a quick glance."
readme = "README.md"
homepage = "https://github.com/crodjer/sysit"
version = "0.4.0"
authors = ["Rohan Jain <crodjer@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
clap = "3.0.0-beta.2"
colored = "2.0.0"
sysinfo = "0.18.2"
